Pacman responsive overflow fix

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,6 +11,7 @@
   min-height: 100vh;
   text-align: center;
   justify-content: center;
+  overflow-x: hidden;
 }
 .loadingContainer{
   height: 65vh;
